--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/core": "^8.6.0",
         "drupal/crm_core": "2.x-dev",
         "drupal/feeds": "^3.0@alpha",
+        "drupal/name": "^1.0@RC",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
